-Added Content for Lab 1

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <title>Web GIS Labs</title>
 </head>
 <body>
+<h1>Nicholas Connelly Labs</h1>
+<ul>
+    <li><a href="lab1.html">Lab 1</a></li>
+</ul>
 </body>
 </html>
