-Added Content for Lab 1

--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -8,6 +8,7 @@
 <h1>Lab 1</h1>
 <ul>
     <li><a href="mymaps.html">My Maps Tutorial</a></li>
+    <li><a href="helloworld.html">Hello World</a></li>
 </ul>
 </body>
 </html>
