--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Nicholas Connelly Labs</h1>
 <ul>
-    <li><a href="lab1.html">Lab 1</a></li>
+    <li><a href="Lab1/lab1.html">Lab 1</a></li>
 </ul>
 </body>
 </html>
