--- a/Lab1/helloworld.html
+++ b/Lab1/helloworld.html
@@ -24,8 +24,8 @@
     var map;
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
-            zoom: 8
+            center: {lat: 44.3394823, lng: -78.7431482},
+            zoom: 15
         });
     }
 </script>
