-Added Content for Lab 1

--- a/Lab1/helloworld.html
+++ b/Lab1/helloworld.html
@@ -25,7 +25,8 @@
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
             center: {lat: 44.3394823, lng: -78.7431482},
-            zoom: 15
+            zoom: 15,
+            mapTypeId: 'hybrid'
         });
     }
 </script>
