-Added Content for Lab 1

--- a/Lab1/helloworld.html
+++ b/Lab1/helloworld.html
@@ -24,10 +24,13 @@
     var map;
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
+            /*Modified Center, zoom and Map type*/
             center: {lat: 44.3394823, lng: -78.7431482},
             zoom: 15,
             mapTypeId: 'hybrid'
         });
+
+        /*Add Draggable Marker*/
         var marker = new google.maps.Marker({
             position: {lat: 44.341, lng: -78.7431482},
             map: map,
