-Added Content for Lab 1

--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -9,6 +9,7 @@
 <ul>
     <li><a href="mymaps.html">My Maps Tutorial</a></li>
     <li><a href="helloworld.html">Hello World</a></li>
+    <li><a href="GettingStartedJson.html">Getting Started Json (Directions From Disney to Universal</a></li>
 </ul>
 </body>
 </html>
