--- a/Lab1/GettingStartedJson.html
+++ b/Lab1/GettingStartedJson.html
@@ -5,6 +5,6 @@
     <title>Getting Started Json</title>
 </head>
 <body>
-<p><a href="https://maps.googleapis.com/maps/api/directions/json?origin=Disneyland&destination=Universal+Studios+Hollywood&key=AIzaSyBjat9Xn4ZpPrnQs6PjHRFhQtokwPeWyas">Click Here</a> to get Json Directions from Disney to Universal</p>
+<p><a href="https://maps.googleapis.com/maps/api/directions/json?origin=44.4344,-77.8852&destination=44.3394823,-78.7431482&key=AIzaSyBjat9Xn4ZpPrnQs6PjHRFhQtokwPeWyas">Click Here</a> to get Json Directions from Havelock to Frost Campus</p>
 </body>
 </html>
