-Added Content for Lab 1

--- a/Lab1/directionsjson.html
+++ b/Lab1/directionsjson.html
@@ -5,6 +5,7 @@
     <title>Getting Started Json</title>
 </head>
 <body>
+<h1>Directions Json</h1>
 <p><a href="https://maps.googleapis.com/maps/api/directions/json?origin=44.4344,-77.8852&destination=44.3394823,-78.7431482&key=AIzaSyBjat9Xn4ZpPrnQs6PjHRFhQtokwPeWyas">Click Here</a> to get Json Directions from Havelock to Frost Campus</p>
 </body>
 </html>
