-Added Content for Lab 1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    /*API KEY: AIzaSyBjat9Xn4ZpPrnQs6PjHRFhQtokwPeWyas*/
     <meta charset="UTF-8">
     <title>Web GIS Labs</title>
 </head>
