--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -9,7 +9,11 @@
 <ul>
     <li><a href="mymaps.html">My Maps Tutorial</a></li>
     <li><a href="helloworld.html">Hello World</a></li>
-    <li><a href="directionsjson.html">Getting Started Json (Directions From Havelock to Frost Campus)</a></li>
+    <li><a href="directionsjson.html">Directions Json (Directions From Havelock to Frost Campus)</a></li>
+    <li><a href="placesjson.html">Places Json</a></li>
+    <li><a href="tutorial1.html">Tutorial 1</a></li>
+    <li><a href="tutorial2.html">Tutorial 2</a></li>
+    <li><a href="tutorial3.html">Tutorial 3</a></li>
 </ul>
 </body>
 </html>
