-Added Content for Lab 1

--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -14,6 +14,7 @@
     <li><a href="tutorial1.html">Tutorial 1</a></li>
     <li><a href="tutorial2.html">Tutorial 2</a></li>
     <li><a href="tutorial3.html">Tutorial 3</a></li>
+    <li><a href="option1.html">Option 1</a></li>
 </ul>
 </body>
 </html>
