-Added Content for Lab 2

--- a/Lab2/lab2.html
+++ b/Lab2/lab2.html
@@ -9,7 +9,7 @@
 <ul>
     <li><a href="course1.html">Course 1</a></li>
     <li><a href="course2.html">Course 2</a></li>
-    <li><a href=""></a></li>
+    <li><a href="https://fleming.maps.arcgis.com/home/item.html?id=275fe79b4457429b8becf0bb877121c0">GeoJason</a></li>
     <li><a href=""></a></li>
     <li><a href=""></a></li>
     <li><a href=""></a></li>
