-Added Content for Lab 2

--- a/Lab2/lab2.html
+++ b/Lab2/lab2.html
@@ -11,8 +11,7 @@
     <li><a href="course2.html">Course 2</a></li>
     <li><a href="https://fleming.maps.arcgis.com/home/item.html?id=275fe79b4457429b8becf0bb877121c0">GeoJason</a></li>
     <li><a href="https://developers.arcgis.com/dashboard">My Link To My Developer Page</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+    <li><a href="token.html">Token</a></li>
     <li><a href=""></a></li>
     <li><a href=""></a></li>
     <li><a href=""></a></li>
