--- a/Lab2/token.html
+++ b/Lab2/token.html
@@ -8,5 +8,9 @@
 <h1>Token</h1>
 <p>EQ1cRBWOBmLkb9niHzFR8Se9s7tkpB5dVtnbe4HJKMtTcD8g3yaraSQT6UNfCSp3oXAmIL3fmsLlH33GbMeFDKOfpAdgdqaaZ-k94d_2_AlPlVmprylUZZvozMrR_OOXu55y1tFj4x7jydaSthuBeZB-z8EwNUxxIj8gMOFuobZRjZJ7ELGv-9YCyfzpppp0ydGTQt-__vqQVVj4WHdUEVp491L9f3zLCi5sqHPTr6X3Od0QASfprOexb7_ItXlz</p>
 <p>Expires on Feb 18 2020 10:39:14PM</p>
+
+<a href="https://services1.arcgis.com/pMeXRvgWClLJZr3s/arcgis/rest/services/pointlayerforlab2/FeatureServer/0?token=EQ1cRBWOBmLkb9niHzFR8Se9s7tkpB5dVtnbe4HJKMtTcD8g3yaraSQT6UNfCSp3oXAmIL3fmsLlH33GbMeFDKOfpAdgdqaaZ-k94d_2_AlPlVmprylUZZvozMrR_OOXu55y1tFj4x7jydaSthuBeZB-z8EwNUxxIj8gMOFuobZRjZJ7ELGv-9YCyfzpppp0ydGTQt-__vqQVVj4WHdUEVp491L9f3zLCi5sqHPTr6X3Od0QASfprOexb7_ItXlz">Link to Point Layer</a>
+<a href="https://services1.arcgis.com/pMeXRvgWClLJZr3s/arcgis/rest/services/linelayerforlab2/FeatureServer/0?token=EQ1cRBWOBmLkb9niHzFR8Se9s7tkpB5dVtnbe4HJKMtTcD8g3yaraSQT6UNfCSp3oXAmIL3fmsLlH33GbMeFDKOfpAdgdqaaZ-k94d_2_AlPlVmprylUZZvozMrR_OOXu55y1tFj4x7jydaSthuBeZB-z8EwNUxxIj8gMOFuobZRjZJ7ELGv-9YCyfzpppp0ydGTQt-__vqQVVj4WHdUEVp491L9f3zLCi5sqHPTr6X3Od0QASfprOexb7_ItXlz">Link to Line Layer</a>
+<a href="https://services1.arcgis.com/pMeXRvgWClLJZr3s/arcgis/rest/services/polylayerforlab2/FeatureServer/0?token=EQ1cRBWOBmLkb9niHzFR8Se9s7tkpB5dVtnbe4HJKMtTcD8g3yaraSQT6UNfCSp3oXAmIL3fmsLlH33GbMeFDKOfpAdgdqaaZ-k94d_2_AlPlVmprylUZZvozMrR_OOXu55y1tFj4x7jydaSthuBeZB-z8EwNUxxIj8gMOFuobZRjZJ7ELGv-9YCyfzpppp0ydGTQt-__vqQVVj4WHdUEVp491L9f3zLCi5sqHPTr6X3Od0QASfprOexb7_ItXlz">Link to Poly Layer</a>
 </body>
 </html>
