--- a/Lab2/lab2.html
+++ b/Lab2/lab2.html
@@ -12,9 +12,9 @@
     <li><a href="https://fleming.maps.arcgis.com/home/item.html?id=275fe79b4457429b8becf0bb877121c0">GeoJason</a></li>
     <li><a href="https://developers.arcgis.com/dashboard">My Link To My Developer Page</a></li>
     <li><a href="token.html">Token</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+    <li><a href="tutorial1.html">Tutorial 1</a></li>
+    <li><a href="tutorial2.html">Tutorial 2</a></li>
+    <li><a href="tutorial3.html">Tutorial 3</a></li>
 </ul>
 </body>
 </html>
