-Added Content for Lab 2

--- a/Lab2/tutorial1.html
+++ b/Lab2/tutorial1.html
@@ -21,7 +21,7 @@
         ], function(Map, SceneView) {
 
             var map = new Map({
-                basemap: "topo-vector",
+                basemap: "streets-relief-vector",
                 ground: "world-elevation"  // show elevation
             });
 
