--- a/Lab2/tutorial1.html
+++ b/Lab2/tutorial1.html
@@ -17,11 +17,13 @@
     <script>
         require([
             "esri/Map",
-            "esri/views/SceneView"
-        ], function(Map, SceneView) {
+            "esri/views/SceneView",
+            "esri/widgets/BasemapToggle",
+            "esri/widgets/BasemapGallery"
+        ], function(Map, SceneView, BasemapToggle, BasemapGallery) {
 
             var map = new Map({
-                basemap: "streets-relief-vector",
+                basemap: "topo-vector",
                 ground: "world-elevation"  // show elevation
             });
 
@@ -30,13 +32,25 @@
                 map: map,
                 camera: {
                     position: {  // observation point
-                        x: -118.80800,
-                        y: 33.96100,
-                        z: 25000 // altitude in meters
+                        x: 86.9250,
+                        y: 27.8450,
+                        z: 15500 // altitude in meters
                     },
-                    tilt: 65  // perspective in degrees
+                    tilt: 60  // perspective in degrees
                 }
             });
+
+            var basemapGallery = new BasemapGallery({
+                view: view,
+                source: {
+                    portal: {
+                        url: "http://www.arcgis.com",
+                        useVectorBasemaps: true, // Load vector tile basemap group
+                    },
+                }
+            });
+
+            view.ui.add(basemapGallery, "bottom-left"); // Add to the view
         });
     </script>
 </head>
