--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -29,6 +29,12 @@
             margin: auto;
             font-size: 1rem;
         }
+        #flag{
+            width: 20rem;
+            height: auto;
+            float: right;
+            padding-right: 10rem;
+        }
     </style>
     <link rel="stylesheet" href="https://js.arcgis.com/4.13/esri/css/main.css">
     <script src="https://js.arcgis.com/4.13/"></script>
@@ -76,6 +82,7 @@
     </script>
 </head>
 <body>
+<img src="images/Flag_of_Canada.svg" alt="Canadian Flag" id="flag">
 <div id="info">
     <h1>Provinces of Canada Interactive Guide</h1>
     <p>Click on a Province to see more information.</p>
