--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ArcGIS JavaScript Tutorials: Display a Web Map</title>
     <style>
+        body{
+            background-color: #aaaaaa;
+        }
         #viewDiv {
             padding: 0;
             margin: auto;
@@ -18,6 +21,9 @@
 
         h1{
             font-size: 4rem;
+            -webkit-text-fill-color: #ff0000; /* Will override color (regardless of order) */
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: #000000;
         }
         p{
             font-size: 1.5rem;
@@ -30,10 +36,16 @@
             font-size: 1rem;
         }
         #flag{
-            width: 20rem;
+            width: 20.5rem;
             height: auto;
             float: right;
             padding-right: 10rem;
+        }
+        a{
+            color: #000000;
+        }
+        a:visited{
+            color: #000000;
         }
     </style>
     <link rel="stylesheet" href="https://js.arcgis.com/4.13/esri/css/main.css">
@@ -57,7 +69,7 @@
                 var view = new MapView({
                     container: "viewDiv",
                     map: map,
-                    center: [-106.3468,64.5],
+                    center: [-102,65.5],
                     zoom: 4
                 });
 
@@ -89,7 +101,7 @@
 </div>
 <div id="viewDiv"></div>
 <p class="center">Web App was created using the tutorial from <a href="https://developers.arcgis.com/labs/javascript/configure-pop-ups/">
-    https://developers.arcgis.com/labs/javascript/configure-pop-ups/</a>. A 1 month token was aqquired from
+    https://developers.arcgis.com/labs/javascript/configure-pop-ups/</a>.  A 1 month token was aqquired from
 <a href="https://luna.flemingcollege.ca/arcgis/tokens/generateToken">https://luna.flemingcollege.ca/arcgis/tokens/generateToken</a>
  and used to reference the NiconnelCanadaPro layer directly from the Luna Server.</p>
 </body>
