-Added Content for Lab 3

--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -97,7 +97,7 @@
 <img src="images/Flag_of_Canada.svg" alt="Canadian Flag" id="flag">
 <div id="info">
     <h1>Provinces of Canada Interactive Guide</h1>
-    <p>Click on a Province to see more information.</p>
+    <h2>Click on a Province to see more information.</h2>
 </div>
 <div id="viewDiv"></div>
 <p class="center">Web App was created using the tutorial from <a href="https://developers.arcgis.com/labs/javascript/configure-pop-ups/">
