--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -25,15 +25,11 @@
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: #000000;
         }
-        p{
-            font-size: 1.5rem;
-        }
         .center{
             padding-top: 1.5rem;
             padding-bottom: 1.5rem;
             text-align: center;
             margin: auto;
-            font-size: 1rem;
         }
         #flag{
             width: 20.5rem;
@@ -81,7 +77,7 @@
 
                 // Create the layer and set the popup
                 var Provinces = new FeatureLayer({
-                    url: "https://luna.flemingcollege.ca/arcgis/rest/services/Geom99on/NiconnelCanadaPro/MapServer/0&token=4JDm_wsq3zQ9cD9b3G89FJLQyveFwVLsH12P45Oa-hAMaXx3RunKUA5Ih-hjwMfN5HnVQfbgfksHtYx1Q7BaJQ",
+                    url: "https://luna.flemingcollege.ca/arcgis/rest/services/Geom99on/NiconnelCanadaPro/MapServer/0?token='4JDm_wsq3zQ9cD9b3G89FKXHCW7v3KnqmqobRgCJVDHxziZTgHFYc1U3ujwPLjQ14lfkFWZz_LSa4-niyJaAZjd6NOA1AShcD0dDBZOnWcyraAx-2XEK7I7pixKx51tgc2MzjQ5diHHghRRhdHOXFw'",
                     outFields: ["PRENAME","PRFNAME","PREABBR","PRFABBR","Shape_STAr"],
                     popupTemplate: popupProvinces
                 });
