--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>ArcGIS JavaScript Tutorials: Display a Web Map</title>
+    <title>Provinces of Canada</title>
     <style>
         body{
             background-color: #aaaaaa;
