-Added Content for Lab 3

--- a/Lab3/lunamap.html
+++ b/Lab3/lunamap.html
@@ -77,7 +77,7 @@
 
                 // Create the layer and set the popup
                 var Provinces = new FeatureLayer({
-                    url: "https://luna.flemingcollege.ca/arcgis/rest/services/Geom99on/NiconnelCanadaPro/MapServer/0?token=4JDm_wsq3zQ9cD9b3G89FKXHCW7v3KnqmqobRgCJVDHxziZTgHFYc1U3ujwPLjQ14lfkFWZz_LSa4-niyJaAZjd6NOA1AShcD0dDBZOnWcyraAx-2XEK7I7pixKx51tgc2MzjQ5diHHghRRhdHOXFw",
+                    url: "https://luna.flemingcollege.ca/arcgis/rest/services/Geom99on/NiconnelCanadaPro/MapServer/0?token=4JDm_wsq3zQ9cD9b3G89FJcC_Ygj_FsmqdjaorDuOCitCjkqrnkFIac99TWXfbi3TPQ7pNog5No5qLf3HmfLVIkhsqkdxcW1bq6t_zjrj_mEwlWHM9GK_wpDpbto67xd7XUc-70vpnPMYkh_d9NbHw..",
                     outFields: ["PRENAME","PRFNAME","PREABBR","PRFABBR","Shape_STAr"],
                     popupTemplate: popupProvinces
                 });
