--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="Lab1/lab1.html">Lab 1</a></li>
     <li><a href="Lab2/lab2.html">Lab 2</a></li>
     <li><a href="Lab3/lab3.html">Lab 3</a></li>
+    <li><a href="Lab4/lab4.html">Lab 4</a></li>
 </ul>
 </body>
 </html>
